# zeroindex

./: .coveragerc  .envrc  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.simple  HATCHET_SETUP.md  INFRASTRUCTURE_CHANGES.md  Makefile  README.md  conftest.py  helm-values.staging.secrets.yaml  k8s-zero-deployment.yaml  manage.py  minimal_app.py  pyproject.toml  requirements.docker.txt  requirements.freeze.txt  wsgi.py
apps/blocks/: TODO.md  __init__.py  block_chunker.py  chain_config.py  cli.py  create_real_chunk.py  get_1day_chunk.py  get_full_chunk.py  quick_test.py  s3_uploader.py  test_all.py  test_chunks.py  test_live.py  trace_verifier.py
apps/blocks/management/commands/: import_chunk.py
frontend/: codegen.yml
infra/common/: .env  compose.yml
infra/dev/: .env  Caddyfile  compose.yml
infra/prod/cluster/: install-postgres.sh
k8s/: hatchet.yaml
scripts/: advanced_eth_monitor.py  advanced_eth_monitor_v2.py  create_test_chunks.py  monitor_eth_sync.py  monitor_sync.sh  quick_sync_check.sh
zeroindex/: __init__.py  celery.py
zeroindex/apps/blocks/: apps.py  models.py  tasks.py
zeroindex/apps/blocks/migrations/: 0001_initial.py  0002_chunk_chunkrepairlog_and_more.py
zeroindex/apps/chains/: apps.py  models.py
zeroindex/apps/chains/fixtures/: base_mainnet.json
zeroindex/apps/chains/migrations/: 0001_initial.py  0002_add_block_chunking_config.py
zeroindex/apps/nodes/: admin.py  apps.py  models.py  services.py  sync_monitor.py
zeroindex/apps/users/: admin.py  models.py
zeroindex/settings/: project.py  test_settings.py  urls.py
zeroindex/utils/: admin.py  hatchet.py  models.py  workflows.py
zeroindex/utils/views/: __init__.py  price.py
zeroindex/workflows/: __init__.py  example_workflows.py
(+26 files in other folders)
